scarlet/cms/static/scarlet/source/stylesheets/views/_modal.scss
@import '~jquery-ui/themes/base/all.css';

.ui-dialog {
  padding: 20px;
  z-index: 4;
  .ui-dialog-content{
    padding: 0;
  }
}

.ui-widget-overlay {
    background: $gray-light;
    opacity: .7;
}

.ui-widget-header {
  background: none;
  border: none;
}

.ui-dialog .ui-dialog-titlebar-close {

}

.frame-wrapper {
  position: relative;
  padding-bottom: 52%;
  padding-top: 30px;
  height: 0;
  overflow: hidden;
  z-index: 10;

  iframe,
  object,
  embed {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
  }
}


@media screen and (max-width: 700px){
	.frame-wrapper {
    position: relative;
    padding-bottom: 47%;
    padding-top: 30px;
    height: 0;
    overflow: hidden;
  }
}

.dialog__no-title >  .ui-dialog-titlebar {
  display: none;
}

.modal__frameWrap{
  height: 100%;
  width: 100%;
  // STACKED
  position: absolute;
  top: 0;
}

// body.modal__body, {
//   background: none;
//   border: none;
//   section#main {
//     padding: 0;
//     border-top: 0;
//     &:before {
//       display: none;
//     }
//   }
//   #container{
//     padding-bottom: 0;
//   }
// }

